--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Tic Tac Toe</h1>
+
+      <div id="container>">
+      <div class="wrapper">
+        <div class="space" id="B0">0</div>
+        <div class="space" id="B1">1</div>
+        <div class="space" id="B2">2</div>
+        <div class="space" id="B3">3</div>
+        <div class="space" id="B4">4</div>
+        <div class="space" id="B5">5</div>
+        <div class="space" id="B6">6</div>
+        <div class="space" id="B7">7</div>
+        <div class="space" id="B8">8</div>
+
+      </div>
+        </div>
     </body>
 </html>
