--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
       <div id="container>">
       <div class="wrapper">
-        <div class="space" id="B0">0</div>
-        <div class="space" id="B1">1</div>
-        <div class="space" id="B2">2</div>
-        <div class="space" id="B3">3</div>
-        <div class="space" id="B4">4</div>
-        <div class="space" id="B5">5</div>
-        <div class="space" id="B6">6</div>
-        <div class="space" id="B7">7</div>
-        <div class="space" id="B8">8</div>
+        <div class="space" id="B0"></div>
+        <div class="space" id="B1"></div>
+        <div class="space" id="B2"></div>
+        <div class="space" id="B3"></div>
+        <div class="space" id="B4"></div>
+        <div class="space" id="B5"></div>
+        <div class="space" id="B6"></div>
+        <div class="space" id="B7"></div>
+        <div class="space" id="B8"></div>
 
       </div>
         </div>
