--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <body>
       <h1>Tic Tac Toe</h1>
 
-      <div id="container>">
+      <div id="container">
+
       <div class="wrapper">
         <div class="space" id="B0"></div>
         <div class="space" id="B1"></div>
