--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
       <div id="container">
 
+
+
       <div class="wrapper">
         <div class="space" id="B0"></div>
         <div class="space" id="B1"></div>
@@ -26,8 +28,12 @@
         <div class="space" id="B6"></div>
         <div class="space" id="B7"></div>
         <div class="space" id="B8"></div>
-
+</div>
       </div>
+        </div>
+
+        <div id="winBox">
+
         </div>
     </body>
 </html>
