added grid style

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
           RESET
         </div>
 
+        <div class="neon" id="xScores">
+          X_has_One
+        </div>
+
+        <div class="neon" id="oScores">
+            O_Score
+          </div>
 
 
     </body>
