added modal button

--- a/index.html
+++ b/index.html
@@ -1,53 +1,74 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Tic Tac Toe</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Tic Tac Toe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-      <h1 class="neon" id="title">___________Tic_Tac_Toe___________</h1>
-
-      <div id="container">
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
 
 
+</head>
 
-      <div class="flux" id="wrapper">
-        <div class="space" class="row" id="B0"></div>
-        <div class="space" id="B1"></div>
-        <div class="space" id="B2"></div>
-        <div class="space" id="B3"></div>
-        <div class="space" id="B4"></div>
-        <div class="space" id="B5"></div>
-        <div class="space" id="B6"></div>
-        <div class="space" id="B7"></div>
-        <div class="space" id="B8"></div>
-</div>
-      </div>
-        </div>
+<body>
 
-        <!-- <div class "neon" id="winBox"> -->
-        </div>
+  <!-- Modal Section-->
 
-        <div class="neon"id="reset">
-          RESET
-        </div>
+  <!-- Trigger/Open The Modal -->
+  <button id="myBtn">Sign In</button>
 
-        <div class="neon" id="xScores">
-          X_has_One
-        </div>
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
 
-        <div class="neon" id="oScores">
-            O_Score
-          </div>
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis veritatis quod consequuntur autem quam neque, nostrum, sunt aut animi, inventore consequatur laboriosam officia vitae aperiam eveniet incidunt totam quos ullam? </p>    </div>
+
+  </div>
+  <!-- Modal Section-->
+
+  <h1 class="neon" id="title">___________Tic_Tac_Toe___________</h1>
+
+  <div id="container">
 
 
-    </body>
+
+    <div class="flux" id="wrapper">
+      <div class="space" class="row" id="B0"></div>
+      <div class="space" id="B1"></div>
+      <div class="space" id="B2"></div>
+      <div class="space" id="B3"></div>
+      <div class="space" id="B4"></div>
+      <div class="space" id="B5"></div>
+      <div class="space" id="B6"></div>
+      <div class="space" id="B7"></div>
+      <div class="space" id="B8"></div>
+    </div>
+  </div>
+  </div>
+
+  <!-- <div class "neon" id="winBox"> -->
+  </div>
+
+  <div class="neon" id="reset">
+    RESET
+  </div>
+
+  <div class="neon" id="xScores">
+    X_has_One
+  </div>
+
+  <div class="neon" id="oScores">
+    O_Score
+  </div>
+
+
+</body>
+
 </html>
