added win status box at bottom, worked on formatting

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   </div>
   </div>
 
-  <!-- <div class "neon" id="winBox"> -->
-  </div>
+
 
 
 
@@ -57,6 +56,8 @@
 
   </div>
 
+  <div class= "neon" id="winBox">
+    </div>
 
 
   <!-- The Modal -->
@@ -102,6 +103,19 @@
 
     </div>
   </div>
+
+  <div id="outState" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+
+        win state here
+
+      </div>
+    </div>
+
+
   <!-- Modal Section-->
 
   <!-- <div class="neon" id="xScores">
