fixed second modal issue

--- a/index.html
+++ b/index.html
@@ -119,15 +119,16 @@
   </div>
 
 
-  <!-- broken Modal content -->
+  <!-- fixed Modal content -->
 
-  <div id="outState" class="modal">
+  <div id="outState" class="outModal">
 
     <!-- Modal content -->
-    <div class="modal-content">
+    <div class="out-modal-content">
       <span class="close">&times;</span>
 
-      win state here
+      Log Out?
+      Change Password
 
     </div>
   </div>
