--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
 <body>
 
+  <button id="newGame">
+    NEW GAME
+  </button>
+  <div id="sendGame">
+    SEND GAME
+  </div>
+
   <h1 class="neon" id="title">___________Tic_Tac_Toe___________</h1>
 
   <div id="container">
