working GET and display of game history

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     NEW GAME
   </button>
 
+  <button id="getGames">
+GET GAMES
+</button>
 
   <h1 class="neon" id="title">___________Tic_Tac_Toe___________</h1>
 
@@ -141,6 +144,7 @@
   </div>
 
 
+
   <!-- Modal Section-->
 
   <!-- <div class="neon" id="xScores">
@@ -151,7 +155,9 @@
     O_Score
   </div> -->
 
+  <div id="gameHistory">
 
+  </div>
 </body>
 
 </html>
