styled game get

--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
     NEW GAME
   </button>
 
-  <button id="getGames">
-GET GAMES
-</button>
-
   <h1 class="neon" id="title">___________Tic_Tac_Toe___________</h1>
 
   <div id="container">
@@ -58,9 +54,10 @@ GET GAMES
 
   <div id="menu">
     <!-- Trigger/Open The Modal -->
-    <div id="signIn" class="neon">Sign__In</div>
+    <div id="signIn" class="neon"> <br> Sign__In</div>
+    <div id="getGames" class="neon"> </br> history </div>
     <div id="reset" class="neon"> RESET</div>
-    <div id="signOut" class="neon">Log__Out</div>
+    <div id="signOut" class="neon"> </br>Log__Out</div>
 
   </div>
 
@@ -147,17 +144,18 @@ GET GAMES
 
   <!-- Modal Section-->
 
-  <!-- <div class="neon" id="xScores">
-    X_has_One
+  <div id="myModalTwo" class="modalTwo">
+
+    <!-- Modal content -->
+    <div class="modal-two-content">
+      <span class="close">&times;</span>
+       <div id="gameHistory">
+      </div>
+    </div>
+
   </div>
 
-  <div class="neon" id="oScores">
-    O_Score
-  </div> -->
 
-  <div id="gameHistory">
-
-  </div>
 </body>
 
 </html>
