--- a/index.html
+++ b/index.html
@@ -78,29 +78,30 @@
 
         <fieldset>
           <legend>_Log_in_</legend>
-          <input type="text" name="credentials[email]" placeholder="Email">
+          <input type="text" name="credentials[email]" placeholder="Email" class="buttons">
 
-          <input type="password" name="credentials[password]" placeholder="Password">
+          <input type="password" name="credentials[password]" placeholder="Password" class="buttons">
 
-          <input type="submit" value="Sign in!"  >
+          <input type="submit" value="Sign in!"  class="buttons">
 
         </fieldset>
       </form>
-      <br>
-      <br>
+    </br>
+    </br>
+    </br>
       <form id="sign-up" class="border">
 
         <fieldset>
 
           <legend>_Sign_up_</legend>
 
-          <input type="text" name="credentials[email]" placeholder="Email">
+          <input type="text" name="credentials[email]" placeholder="Email" class="buttons">
 
-          <input type="password" name="credentials[password]" placeholder="Password">
+          <input type="password" name="credentials[password]" placeholder="Password" class="buttons">
 
-          <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
+          <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password" class="buttons">
 
-          <input type="submit" value="Sign up!">
+          <input type="submit" value="Sign up!"class="buttons">
 
         </fieldset>
 
@@ -123,17 +124,18 @@
       <form id="sign-out" class="border">
           <fieldset>
             <legend>Sign__Out!</legend>
-            <input type="submit" value="Sign out!">
+            <input type="submit" value="Sign out!" class="buttons" id="signOutButton">
           </fieldset>
         </form>
-        <br>
-        <br>
+      </br>
+    </br>
+    </br>
         <form id="change-password" class="border">
           <fieldset>
             <legend>Change__Password!</legend>
-            <input type="password" name="passwords[old]" placeholder="Old Password">
-            <input type="password" name="passwords[new]" placeholder="New Password">
-            <input type="submit" value="Change Password!">
+            <input type="password" name="passwords[old]" placeholder="Old Password" class="buttons">
+            <input type="password" name="passwords[new]" placeholder="New Password" class="buttons">
+            <input type="submit" value="Change Password!" class="buttons">
           </fieldset>
         </form>
 
