--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
     <div class="flux" id="wrapper">
-      <div class="space" class="row" id="B0"></div>
+      <div class="space" id="B0"></div>
       <div class="space" id="B1"></div>
       <div class="space" id="B2"></div>
       <div class="space" id="B3"></div>
